# visualizing-math

./: .gitignore  README.md  USAGE.md  scene.json
python/: pyproject.toml
python/examples/: cluster_reveal.py  embedding_explore.py  galaxy_flythrough.py  klotski_paths.py  lissajous_ribbons.py  prime_spiral.py  small_world_shells.py
python/mathviz/: __init__.py  cli.py
python/mathviz/data/: __init__.py  loaders.py
python/mathviz/layout/: __init__.py  cluster_shape.py  force_atlas2.py  fruchterman.py  umap_layout.py
python/mathviz/render_2d/: manim_bridge.py
python/mathviz/scene/: __init__.py  builder.py  compiler.py  helpers.py  models.py
python/tests/: test_builder.py  test_cluster_shape.py  test_demos_integration.py  test_helpers.py  test_layout.py  test_models.py  test_pipeline_e2e.py  test_snapshots.py
python/tests/snapshots/: basic_scene.json  tiny_scene_frame0.sha256
ts/: package-lock.json  package.json  tsconfig.json  vite.config.ts
ts/public/: index.html  mp4.html
ts/src/: index.ts
ts/src/capture/: headless.ts
ts/src/preview/: server.ts
ts/src/renderer/: CameraController.ts  EdgeLayer.ts  PointCloudLayer.ts  PostProcessing.ts  SceneManager.ts  TimelinePlayer.ts
ts/src/schema/: scene.ts
ts/tests/: renderer.test.ts  schema.test.ts  schema_roundtrip.test.ts
